--- a/style.css
+++ b/style.css
@@ -74,10 +74,9 @@ h2 {
     bottom: 0;
     left: 0;
     visibility: hidden;
-    display: none;
 }
 
-.form-control.error {
+.form-control.error small {
     visibility: visible;
 }
 
